add button styles, minor changes

--- a/components/layout/navbar/navbar.module.scss
+++ b/components/layout/navbar/navbar.module.scss
@@ -1,4 +1,4 @@
-@import "../../styles/settings/_mixins.scss";
+@import "../../../styles/settings/_mixins.scss";
 
 .navbar {
   padding: 1.5rem 0 1.5rem 0;
