--- a/styles/layout.scss
+++ b/styles/layout.scss
@@ -146,3 +146,23 @@
 .justify-center {
   justify-content: center;
 }
+
+.ml {
+  margin-left: 2rem;
+}
+
+.mr {
+  margin-right: 2rem;
+}
+
+.mt {
+  margin-top: 2rem;
+}
+
+.mb {
+  margin-bottom: 2rem;
+}
+
+.icon {
+  padding: 0.5rem
+}
