--- a/styles/typography.scss
+++ b/styles/typography.scss
@@ -11,6 +11,7 @@ body {
 }
 
 a {
+  cursor: pointer;
   color: inherit;
   text-decoration: none;
 }
@@ -73,7 +74,13 @@ h6,
 p {
 }
 
-strong {
+strong, b {
+  font-weight: 600;
+}
+
+i,
+em {
+  font-style: italic;
 }
 
 form input:not([type="checkbox"], [type="submit"]) {
