--- a/styles/settings/_mixins.scss
+++ b/styles/settings/_mixins.scss
@@ -28,6 +28,11 @@
   max-width: 800px;
 }
 
+@function toRem($value) {
+  $remValue: math.div($value, 16) + rem;
+  @return $remValue;
+}
+
 @mixin buttons($bgColor, $borderColor, $fontColor, $fontWeight) {
   background-color: $bgColor;
   border-color: $borderColor;
