--- a/styles/main.scss
+++ b/styles/main.scss
@@ -1,5 +1,7 @@
 // Just bulk import all settings
 // TODO: if the bundle gets too big split to modules
+// TODO: remove all !important decl.
+
 @import "./settings/__settings";
 @import "layout";
 @import "typography";
