--- a/styles/layout.scss
+++ b/styles/layout.scss
@@ -73,6 +73,10 @@
   color: $color-gray !important;
 }
 
+.color-red {
+  color: $color-red !important;
+}
+
 .section {
   padding-top: 2rem;
   padding-bottom: 2rem;
