--- a/components/layout/navbar/navbar.module.scss
+++ b/components/layout/navbar/navbar.module.scss
@@ -3,6 +3,7 @@
 @import "../../../styles/settings/_colors.scss";
 @import "../../../styles/settings/_variables.scss";
 
+// TODO: replace display none with absolute off-screen positioning for better screen reader compatibility
 .navbar {
   box-shadow: 0 0 10px 0px #00000014;
   height: $navbar-height;
