Image redirects for /wp-content to assets.ujet.cx, minor style changes

--- a/styles/settings/_reset.scss
+++ b/styles/settings/_reset.scss
@@ -1,4 +1,15 @@
 // Only reset what needs to be reset (override bad user agent stylesheet)
+// Reset here, not in typography
+
 body, p {
+  margin: 0;
+}
+
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
   margin: 0;
 }
