--- a/styles/settings/_colors.scss
+++ b/styles/settings/_colors.scss
@@ -17,3 +17,61 @@ $color-green: #427f11; // Use for valid messages and success icon
 $color-darkpurple: #14012b;
 $color-lightpurple: #9b58ea;
 $color-mediumpurple: #6e0bdc;
+
+.bg-paleblue {
+  background-color: $color-paleblue;
+}
+.bg-lightblue {
+  background-color: $color-lightblue;
+}
+.bg-mediumblue {
+  background-color: $color-mediumblue;
+}
+.bg-skyblue {
+  background-color: $color-skyblue;
+}
+.bg-darkblue {
+  background-color: $color-darkblue;
+}
+.bg-navy {
+  background-color: $color-navy;
+}
+.bg-orange {
+  background-color: $color-orange;
+}
+.bg-black {
+  background-color: $color-black;
+}
+.bg-white {
+  background-color: $color-white;
+}
+.bg-gray {
+  background-color: $color-gray;
+}
+.bg-darkgray {
+  background-color: $color-darkgray;
+}
+.bg-darkmedium {
+  background-color: $color-darkmedium;
+}
+.bg-mediumgray {
+  background-color: $color-mediumgray;
+}
+.bg-lightgray {
+  background-color: $color-lightgray;
+}
+.bg-red {
+  background-color: $color-red;
+}
+.bg-green {
+  background-color: $color-green;
+}
+.bg-darkpurple {
+  background-color: $color-darkpurple;
+}
+.bg-lightpurple {
+  background-color: $color-lightpurple;
+}
+.bg-mediumpurple {
+  background-color: $color-mediumpurple;
+}
