--- a/styles/layout.scss
+++ b/styles/layout.scss
@@ -72,6 +72,7 @@
   margin: 0 auto;
   padding-left: 1rem;
   padding-right: 1rem;
+  overflow-wrap: break-word;
 }
 
 .d-flex {
@@ -176,8 +177,19 @@
     &.repeat-5 {
       grid-template-columns: repeat(5, 1fr);
     }
+    &.repeat-6 {
+      grid-template-columns: repeat(6, 1fr);
+    }
   }
   .column {
+  }
+}
+
+.flex-columns {
+  display: flex;
+  flex-wrap: wrap;
+  & > * {
+    @include flex-wrap-item(100px);
   }
 }
 
@@ -185,7 +197,7 @@
   display: flex;
   flex-flow: column;
 
-  @include desktop () {
+  @include desktop() {
     flex-flow: row;
   }
 }
