--- a/styles/buttons.scss
+++ b/styles/buttons.scss
@@ -8,6 +8,7 @@
   font-weight: 600;
   padding: 0.75rem 1.5rem;
   display: inline-block;
+  text-align: center;
   // TODO: add individual for bg and colors, not all
   transition: all 150ms;
   border: 0.2rem solid $color-navy;
