--- a/components/genericCard/genericCard.module.scss
+++ b/components/genericCard/genericCard.module.scss
@@ -2,9 +2,10 @@
 @import "../../styles/settings/_mixins.scss";
 
 .card {
+    height: 100%;
     border-radius: 1rem;
-    border: 0.1rem solid $color-lightgray;
     @include shadow();
+    overflow: hidden;
 }
 
 .image {
