--- a/styles/settings/_variables.scss
+++ b/styles/settings/_variables.scss
@@ -1,7 +1,9 @@
 $navbar-height: 5rem;
+$desktop: 890px;
+$touch: 890px - 1px;
 $tablet: 768px;
 $mobile: 360px;
-$desktop: 1920px;
+$fullhd: 1920px;
 $narrow: 640px;
 $medium: 1366px;
-$wide: $desktop;
+$wide: $fullhd;
