--- a/styles/settings/_variables.scss
+++ b/styles/settings/_variables.scss
@@ -1,6 +1,6 @@
 $navbar-height: 5rem;
 $desktop: 890px;
-$touch: 890px - 1px;
+$touch: $desktop - 1px;
 $tablet: 768px;
 $mobile: 360px;
 $fullhd: 1920px;
