--- a/styles/main.scss
+++ b/styles/main.scss
@@ -24,6 +24,6 @@ main {
 }
 
 // This has to be important to override marketo
-.mktoForm {
-  width: unset !important;
+.mktoForm, .mktoFormRow, .mktoFieldDescriptor, .mktoFormCol, .mktoField, .mktoLabel, .mktoHasWidth {
+  width: 100% !important;
 }
