--- a/styles/typography.scss
+++ b/styles/typography.scss
@@ -121,26 +121,9 @@ input[type="number"]::-webkit-inner-spin-button {
   opacity: 1;
 }
 
-ol,
-ul {
-  margin: 2rem 0 2rem 2rem;
-}
-
-ol {
-  li {
-    margin-top: 1.5rem;
-  }
-}
-ul {
-  li {
-    margin-top: 1rem;
-  }
-}
-
 /* This class is a wrapper that applies a standard typography for pure html content in 
 blog posts or anywhere where html is rendered */
 .content {
-
   h1,
   h2,
   h3,
@@ -158,6 +141,22 @@ blog posts or anywhere where html is rendered */
     color: $color-lightblue;
     text-decoration: underline;
   }
+
+  // ol,
+  // ul {
+  //   margin: 2rem 0 2rem 2rem;
+  // }
+
+  // ol {
+  //   li {
+  //     margin-top: 1.5rem;
+  //   }
+  // }
+  // ul {
+  //   li {
+  //     margin-top: 1rem;
+  //   }
+  // }
 
   // TODO: Might want to make these specific to blog, but keep here for now since posts might share the css...
   .alignright {
