add resourceList module, several styling adjustments

--- a/components/agility-pageModules/clientLogosList/clientLogosList.module.scss
+++ b/components/agility-pageModules/clientLogosList/clientLogosList.module.scss
@@ -7,7 +7,9 @@
     display: flex;
     justify-content: center;
     text-align: center;
-    padding-bottom: 4rem;
+    padding: 2rem 0;
+    margin: 3rem 0 1rem 0;
+    text-align: center;
   }
   .content {
     display: flex;
