--- a/components/agility-pageModules/textGridWithMedia/textGridWithMedia.module.scss
+++ b/components/agility-pageModules/textGridWithMedia/textGridWithMedia.module.scss
@@ -5,7 +5,9 @@
     align-items: center;
     text-align: center;
     flex-direction: column;
-    margin: 1rem 0;
+    padding: 2rem 0;
+    margin: 3rem 0 1rem 0;
+    text-align: center;
     h1,
     h2,
     h3,
