--- a/components/genericCard/genericCard.module.scss
+++ b/components/genericCard/genericCard.module.scss
@@ -1,24 +1,47 @@
-@import "../../styles/settings/_colors.scss";
-@import "../../styles/settings/_mixins.scss";
+@import "../../styles/settings/colors";
+@import "../../styles/settings/mixins";
 
 .card {
-    height: 100%;
-    border-radius: 1rem;
-    @include shadow();
+  height: 40vh;
+  min-height: 400px;
+  border-radius: 1rem;
+  @include shadow();
+  display: flex;
+  flex-direction: column;
+  @include touch() {
+    .image {
+      max-height: 360px;
+    }
+  }
+
+  .image {
+    background: $color-gray;
+    flex: 1;
+    max-height: 200px;
+    min-height: 170px;
     overflow: hidden;
-}
+    border-top-left-radius: 1rem;
+    border-top-right-radius: 1rem;
+  }
+  .textContent {
+    flex: 2;
+    .category {
+      text-transform: capitalize;
+      color: $color-black;
+      font-size: 1rem;
+      font-weight: 600;
+      padding: 1rem 1.5rem 0 1.5rem;
+    }
 
-.image {
-    // TODO: max height
-}
+    .title {
+      padding: 1rem 1.5rem 0 1.5rem;
+    }
 
-.title {
-    padding: 1rem 1.5rem 0 1.5rem;
-}
-
-.link {
-    padding: 0.5rem 1.5rem 3rem 1.5rem;
-    display: block;
-    font-weight: 600;
-    font-size: 1rem;
+    .link {
+      padding: 0.5rem 1.5rem 3rem 1.5rem;
+      display: block;
+      font-weight: 600;
+      font-size: 1rem;
+    }
+  }
 }
