--- a/styles/settings/_mixins.scss
+++ b/styles/settings/_mixins.scss
@@ -13,6 +13,12 @@
   }
 }
 
+@mixin mobile() {
+  @media (max-width: var.$mobile) {
+    @content;
+  }
+}
+
 @mixin desktop() {
   @media (min-width: var.$desktop) {
     @content;
