--- a/styles/typography.scss
+++ b/styles/typography.scss
@@ -85,7 +85,7 @@ em {
   font-style: italic;
 }
 
-form input:not([type="checkbox"], [type="submit"]) {
+form input:not([type="checkbox"], [type="submit"]), select {
   background: $color-white;
   //   border-radius: toRem(4);
   //   border: toRem(1) solid $color-darkgray;
@@ -93,7 +93,7 @@ form input:not([type="checkbox"], [type="submit"]) {
   //   font-size: $size-16px; /* 16px */
   //   height: toRem(48);
   //   padding: toRem(20) toRem(15);
-  width: 100%;
+  width: 100% !important;
   padding: 0.5rem;
   border-radius: 0.2rem;
   border: 0.1rem solid $color-gray;
@@ -106,6 +106,7 @@ label {
   // TODO: Do we have font weight 500 available? 600 is too bold here.
   font-weight: 500;
   padding: 0.5rem 0;
+  display: flex;
 }
 
 input[type="checkbox"]:checked ~ span:before {
