minor styling, sanitize and transform unsafe HTML

--- a/components/subscribe/subscribe.module.scss
+++ b/components/subscribe/subscribe.module.scss
@@ -10,6 +10,7 @@
   min-height: 512px;
   @include desktop() {
     max-width: 25vw;
+    min-width: 100%;
   }
   .heading {
     text-transform: uppercase;
