--- a/components/agility-pageModules/blogPostContent/blogPostContent.module.scss
+++ b/components/agility-pageModules/blogPostContent/blogPostContent.module.scss
@@ -14,6 +14,11 @@
     }
   }
 
+  // .body {
+  //   display: flex;
+  //   flex-flow: column-reverse;
+  // }
+
   .meta {
     display: block;
     margin-bottom: 2rem;
@@ -25,7 +30,12 @@
 }
 
 .share {
-  @include desktop() {
+  display: flex;
+  position: relative;
+  top: 0;
+  left: 0;
+  @include ultraLargeDesktop() {
+    flex-flow: column;
     top: 50%;
     left: -7rem;
     padding-top: 4rem;
