--- a/styles/settings/_colors.scss
+++ b/styles/settings/_colors.scss
@@ -14,6 +14,7 @@ $color-mediumgray: #e5e5e5;
 $color-lightgray: #eeeeee;
 $color-red: #ff0000; // Use for Error messages and Error selectors
 $color-green: #427f11; // Use for valid messages and success icon
+$color-purple: #5a0bdc;
 $color-darkpurple: #14012b;
 $color-lightpurple: #9b58ea;
 $color-mediumpurple: #6e0bdc;
